Fix on hero travel (rgba instead of rgb)

--- a/client/src/styles/templates/_hero-travel-from.scss
+++ b/client/src/styles/templates/_hero-travel-from.scss
@@ -6,5 +6,5 @@
 
 .travel-form {
     padding: 3rem;
-    background-color: rgb(clr(tertiary), 0.8);
+    background-color: rgba(clr(tertiary), 0.8);
 }
