--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -37,3 +37,4 @@
 // @import 'organisms/header';
 
 @import 'styles/templates/_hero-travel-from.scss';
+@import 'styles/templates/_destinations-list.scss';
