--- a/client/src/styles/templates/_hero-travel-from.scss
+++ b/client/src/styles/templates/_hero-travel-from.scss
@@ -1,7 +1,8 @@
 .hero-travel {
     position: relative; 
     padding: 16rem 0;
-    background-color: clr(th-2);
+    background-image: url(https://youmatter.world/app/uploads/sites/2/2019/11/travel-world.jpg);
+    background-size: cover;
 }
 
 .travel-form {
