--- a/T-Web-800-REWORK/project/theme/sources/styles/site.scss
+++ b/T-Web-800-REWORK/project/theme/sources/styles/site.scss
@@ -46,6 +46,7 @@
 //  ───────────────────────────────────
 @import 'templates/legal';
 @import 'templates/modal';
+@import 'templates/modules';
 @import 'templates/home';
 @import 'templates/destinations';
 @import 'templates/organization';
