--- a/T-Web-800-REWORK/project/theme/views/home.twig
+++ b/T-Web-800-REWORK/project/theme/views/home.twig
@@ -137,12 +137,36 @@
 		<section class="map-section">
 			<div class="row">
 				<div class="column-22 offset-1">
-					{% if site.contact_latitude and (site.contact_longitude|raw) %}
-						<div id="map-contact"></div>
+					{% if site.latitude and site.longitude %}
+						<div class="map-section" id="map-location"></div>
 					{% endif %}
 				</div>
 			</div>
 		</section>
 		<!-- ###### CITATION END ###### -->
 	</main>
+
+  {% if (site.latitude|default(0)) and (site.longitude|default(0)) %}
+    <script type="text/javascript">
+      var mapCoordinates = { "latitude": "{{ site.latitude
+        matches '/^[-+]?[0-9]*\\.?[0-9]+$/'
+        ? site.latitude
+        : 0 }}", "longitude": "{{ site.longitude
+        matches '/^[-+]?[0-9]*\\.?[0-9]+$/'
+        ? site.longitude
+        : 0 }}" }
+
+      var mapLocations = [{
+        "name": "{{ site.title }}",
+        "coordinates": { "latitude":
+        "{{ site.latitude matches '/^[-+]?[0-9]*\\.?[0-9]+$/'
+          ? site.latitude
+          : 0 }}", "longitude": "{{ site.longitude
+          matches '/^[-+]?[0-9]*\\.?[0-9]+$/'
+          ? site.longitude
+          : 0 }}" },
+        }
+      ]
+    </script>
+  {% endif %}
 {% endblock %}
